config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataprovider-deployment
  labels:
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      name: dataprovider-service
      labels:
        version: v1
    spec:
      serviceAccountName: dataprovider-service-sa
      containers:
      - name: dataprovider
        image: gcr.io/terra-kernel-k8s/dataprovider:0.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.16
        command: ["/cloud_sql_proxy",
                  "-instances=terra-kernel-k8s:us-central1:$(SQL_INSTANCE_NAME)=tcp:5432",
                  "-credential_file=/secrets/sa/service-account.json"]
        securityContext:
          runAsUser: 2  # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: sa-creds
          mountPath: /secrets/sa
          readOnly: true
      volumes:
        - name: sa-creds
          secret:
            secretName: dataprovider-sa
